--- a/content/post/post2/index.en.Rmd
+++ b/content/post/post2/index.en.Rmd
@@ -7,8 +7,8 @@ image:
   focal_point: ""
   placement: 1
   preview_only: true
-subtitle: 'Welcome. In this post, I am going to show you how you may create point maps, linear regression and logistic regression utilizing base R tools and tidymodels workflow'
-summary: 'Welcome. In this post, I am going to show you how you may create point maps, linear regression and logistic regression utilizing base R tools and tidymodels workflow'
+subtitle: 'Welcome. In this post, I am going to show you how you may create point maps, linear regression and logistic regression utilizing base R tools and tidymodels workflow.'
+summary: 'Welcome. In this post, I am going to show you how you may create point maps, linear regression and logistic regression utilizing base R tools and tidymodels workflow.'
   
 categories: ["R"]
 tags: ["R Markdown", "tidyverse", "maps", "tidymodels"]
