--- a/content/post/post1/index.en.Rmd
+++ b/content/post/post1/index.en.Rmd
@@ -6,7 +6,7 @@ image:
   caption: 'Image credit: Pott L.P.'
   focal_point: ""
   placement: 1
-  preview_only: true
+  preview_only: false
 subtitle: 'Welcome. In this post, I am going to show you how you may create maps of cultivated crops in Rio Grande do Sul state, Brazil.'
 summary: 'Welcome. In this post, I am going to show you how you may create maps of cultivated crops in Rio Grande do Sul state, Brazil.'
   
